--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,24 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lobster" rel="stylesheet">
+
 	<style>
+
+	*
+	{
+		font-family: 'Kaushan Script', cursive;
+	}
+
+	p, span
+	{
+		font-size: 1.2em;
+	}
+
+	.space20
+	{
+		height: 20px;
+	}
 
 	.titleBorder
 	{
@@ -32,41 +49,151 @@
 		margin-top: 0;
 	}
 
+	img
+	{
+		height: 80px;
+	}
+	.col-md-3{
+		padding: auto !important;
+	}
 	</style>
 
 </head>
 
 <body>
 
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Thierry</a>
-			</div>
-
-			<div class="collapse navbar-collapse" id="">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="home.html">Home</a></li>
-					<li class="active"><a href="skills.html">Skills</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Thierry</a>
 		</div>
-	</nav>
+
+		<div class="collapse navbar-collapse" id="">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="home.html">Home</a></li>
+				<li class="active"><a href="skills.html">Skills</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<hr class="hrTop">
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-offset-1 col-xs-11">
+			<h2>Skills</h2>
+		</div>
+	</div>
+</div>
+<hr class="hrBottom">
 
 
-		<hr class="hrTop">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-offset-1 col-xs-11">
-					<h2>Skills</h2>
-				</div>
+<div class="container">
+	<div class="row">
+		<h2>Web Development:</h2>
+		<div class="space20"></div>
+
+		<div class="col-md-1">
+			<p>HTML</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" style="width: 80%">
+			    <span class="sr-only">80% Complete</span>
+			    	80%
+			  </div>
 			</div>
 		</div>
-		<hr class="hrBottom">
+		<div class="col-md-1">
+			<p>CSS</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+			    <span class="sr-only">75% Complete</span>
+			    	75%
+			  </div>
+			</div>
+		</div>
+		<div class="col-md-1">
+			<span>Bootstrap</span>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+			    <span class="sr-only">70% Complete</span>
+			    70%
+			  </div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-1">
+			<p>JavaScript</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+			    <span class="sr-only">40% Complete</span>
+			    40%
+			  </div>
+			</div>
+		</div>
+		<div class="col-md-1">
+			<p>JQuery</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+			    <span class="sr-only">50% Complete</span>
+			    50%
+			  </div>
+			</div>
+		</div>
+		<div class="col-md-1">
+			<p>PHP</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+			    <span class="sr-only">60% Complete</span>
+			    60%
+			  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-1">
+			<p>MySQL</p>
+		</div>
+		<div class="col-md-3">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+			    <span class="sr-only">60% Complete</span>
+			    60%
+			  </div>
+			</div>
+		</div>
+	</div>
+	<h2>Languages:</h2>
+	<div class="row">
+		<div class="col-md-2">
+			<p>French <br>
+			English <br>
+			Cambodian (Khmer)</p>
+			
+		</div>
+		<div class="col-md-9">
+			<img src="5stars.png">
+			(Trilingual)
+		</div>
+	</div>
+	
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
