--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Home</title>
+	<title>Portfolio</title>
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -26,17 +26,25 @@
 
 	.hrBottom
 	{
-		border-bottom: 0;
 		border-top: 2px solid black;
+		border-bottom: 0;
 		padding: 0;
 		margin-top: 0;
 	}
 
-	.details
+	.imgKwoon
 	{
-		width: 100%;
-		height: 400px;
-		border: 2px solid black;
+		width: 90%;
+	}
+
+	.colPortfolio
+	{
+		border: 1px solid red;
+	}
+
+	figcaption
+	{
+		margin-top: 10px;
 	}
 
 	</style>
@@ -64,54 +72,71 @@
 		</div>
 	</nav>
 
+	<hr class="hrTop">
 
-		<hr class="hrTop">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-offset-1 col-xs-12">
-					<h2>Portfolio</h2>
-				</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-11 col-xs-12">
+				<h2>Portfolio</h2>
 			</div>
 		</div>
-		<hr class="hrBottom">
+	</div>
 
+	<hr class="hrBottom">
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-offset-1 col-xs-12">
-					<h3>Responsive Websites</h3>	
-				</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-11 col-xs-12">
+				<h3 style="margin-top:-10px;">Responsive Websites</h3>	
 			</div>
-			<div class="row">
-				
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background-color:red; border:1px solid pink; height: 200px; ">
-				</div>
-
-
+		</div>
+		<div class="row">
+			
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
 			</div>
-			
 
-				
-			
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
+			</div>
+
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
+			</div>
+
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
+			</div>
+
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
+			</div>
+
+			<div class="col-md-4 col-sm-6 colPortfolio text-center">
+				<figure>
+					<img class="imgKwoon" src="kwoonIntegration.png">
+					<figcaption>Projet Integration<figcaption/>
+				</figure>
+			</div>
 
 		</div>
-
-
+		
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
