--- a/skills.html
+++ b/skills.html
@@ -73,7 +73,7 @@
 
     .titre
     {
-        font-size: 1.5em;
+        font-size: 1.4em;
     }
 
     .txtBar
@@ -119,13 +119,13 @@
     <div class="container">
         
         <div class="row">
-            
+            <h2>Web Development: </h2>
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgHtml" src="html5css3.png">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                <span class="sr-only">60% Complete</span>
-                <span class="txtBar">30%</span>
+            <div class="progress-bar progress-bar-info animHtml" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                <span class="sr-only">80% Complete</span>
+                <span class="txtBar">80%</span>
             </div>
                 </div>
             </div>
@@ -133,9 +133,9 @@
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgBootstrap" src="bootstrap.png">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                <span class="sr-only">60% Complete</span>
-                <span class="txtBar">30%</span>
+            <div class="progress-bar progress-bar-info animBootstrap" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                <span class="sr-only">70% Complete</span>
+                <span class="txtBar">70%</span>
             </div>
                 </div>
             </div>
@@ -143,18 +143,18 @@
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgJquery" src="jquery.png">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                    <span class="sr-only">60% Complete</span>
-                    <span class="txtBar">30%</span>
+                    <div class="progress-bar progress-bar-info animJQuery" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                    <span class="sr-only">50% Complete</span>
+                    <span class="txtBar">50%</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgPhp" src="php.png">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar progress-bar-info animPhp" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
-                <span class="txtBar">30%</span>
+                <span class="txtBar">60%</span>
             </div>
                 </div>
             </div>
@@ -162,9 +162,9 @@
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgMysql" src="mysql.png">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar progress-bar-info animMysql" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
-                <span class="txtBar">30%</span>
+                <span class="txtBar">60%</span>
             </div>
                 </div>
             </div>
@@ -172,9 +172,9 @@
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgGit" src="git.png">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info anim" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
-                <span class="txtBar">30%</span>
+                <span class="txtBar">60%</span>
             </div>
                 </div>
             </div>
