Quelque modifications de style sur les pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,21 @@
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
 	<style>
+
+	body
+    {
+        background-color: #f9c667;
+        font-family: 'Kaushan Script', cursive;
+        font-size: 2em;
+    }
+
+    .title
+    {
+        font-size: 1.3em;
+    }
 
 	.titleBorder
 	{
@@ -35,12 +48,15 @@
 	.imgKwoon
 	{
 		width: 90%;
+		border: 1px solid gray;
+		border-radius: 10px;
+
 	}
 
-	.colPortfolio
+	/*.colPortfolio
 	{
 		border: 1px solid red;
-	}
+	}*/
 
 	figcaption
 	{
@@ -56,7 +72,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Thierry</a>
+				<a class="navbar-brand title" href="#">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="">
@@ -84,12 +100,12 @@
 
 	<hr class="hrBottom">
 
+	<div class="container">
+		
+		<h3 style="margin-top:-10px;">Responsive Websites</h3>	
+			
+	</div>
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-offset-1 col-md-11 col-xs-12">
-				<h3 style="margin-top:-10px;">Responsive Websites</h3>	
-			</div>
-		</div>
 		<div class="row">
 			
 			<div class="col-md-4 col-sm-6 colPortfolio text-center">
