--- a/about.html
+++ b/about.html
@@ -2,12 +2,25 @@
 
 <html>
 <head>
-	<title>Home</title>
+	<title>About</title>
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
 	<style>
+
+	body
+    {
+        background-color: #f9c667;
+        font-family: 'Kaushan Script', cursive;
+        font-size: 2em;
+    }
+
+    .title
+    {
+        font-size: 1.3em;
+    }
 
 	.titleBorder
 	{
@@ -41,7 +54,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Thierry</a>
+				<a class="navbar-brand title" href="#">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="">
