--- a/home.html
+++ b/home.html
@@ -6,14 +6,21 @@
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
 	<style>
 
-	*
-	{
-		font-family: 'Lobster', cursive;
-	}
+	body
+    {
+        background-color: #f9c667;
+        font-family: 'Kaushan Script', cursive;
+        font-size: 2em;
+    }
+
+    .title
+    {
+        font-size: 1.3em;
+    }
 
 	.titleBorder
 	{
@@ -57,7 +64,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Thierry</a>
+				<a class="navbar-brand title" href="#">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="">
@@ -87,7 +94,6 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-offset-1 col-xs-11">
-					<h2>Create an awesome website</h2>
 					<img src="smartphone.png" class="iphone">
 					<img src="ipad.png" class="ipad">
 				</div>
