--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Caveat|Kaushan+Script|Lobster' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="master.css">
     <style>
@@ -16,6 +16,11 @@
         background-color: #f9c667;
         font-family: 'Kaushan Script', cursive;
         font-size: 2em;
+    }
+
+    .title
+    {
+        font-size: 1.3em;
     }
 
     .titleBorder
@@ -71,11 +76,6 @@
         height: 100px;
     }
 
-    .titre
-    {
-        font-size: 1.4em;
-    }
-
     .txtBar
     {
         font-size: 1.5em;
@@ -90,7 +90,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#"><span class="titre">Thierry</span></a>
+                <a class="navbar-brand title" href="#"><span>Thierry</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="">
@@ -118,8 +118,9 @@
 <hr class="hrBottom">
     <div class="container">
         
+        <h3 style="margin-top:-8px">Web Development: </h3>
+       
         <div class="row">
-            <h2>Web Development: </h2>
             <div class="col-md-4 col-sm-6 text-center">
                 <img class="imgHtml" src="html5css3.png">
                 <div class="progress">
