Portfolio, About and Contact pages edited

--- a/about.html
+++ b/about.html
@@ -66,20 +66,47 @@
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
-
 		</div>
 	</nav>
 
-
-		<hr class="hrTop">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-offset-1 col-xs-11">
-					<h2>About</h2>
-				</div>
+	<!-- <hr class="hrTop"> -->
+	<div class="container-fluid">
+		<div class="row" style="border-top: 2px solid black; border-bottom: 2px solid black;">
+			<div class="col-sm-offset-1 col-xs-11">
+				<h2 style="margin: 5px auto;">About</h2>
 			</div>
 		</div>
-		<hr class="hrBottom">
+	</div>
+	<!-- <hr class="hrBottom"> -->
+
+	<div class="container-fluid" style="background-color: silver; height: 150px">
+	<p>hello fsj mldsfl fjsljfq <br> fjsljfq <br></p>
+		<img style="float:right; margin-right: 50px; border-radius: 100%; width: 5em; border: 1px solid black" src="photo2.jpg">
+	</div>
+
+	<div class="container">
+		
+	  <ul class="nav nav-tabs collapse navbar-collapse">
+	    <li class="active"><a data-toggle="tab" href="#home">Experience</a></li>
+	    <li><a data-toggle="tab" href="#menu1">Education</a></li>
+	    <li><a data-toggle="tab" href="#menu2">Hobbies</a></li>
+	  </ul>
+
+	  <div class="tab-content">
+	    <div id="home" class="tab-pane fade in active">
+	      <h3>Experience</h3>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	    </div>
+	    <div id="menu1" class="tab-pane fade">
+	      <h3>Education</h3>
+	      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	    </div>
+	    <div id="menu2" class="tab-pane fade">
+	      <h3>Hobbies</h3>
+	      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+	    </div>
+	  </div>
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
