--- a/portfolio.html
+++ b/portfolio.html
@@ -7,48 +7,9 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="master.css">
 
 	<style>
-
-	body
-    {
-        background-color: #f9c667;
-        font-family: 'Quattrocento Sans', cursive;
-        font-size: 2em;
-    }
-
-    nav, .title
-    {
-    	font-family: 'Kaushan Script', cursive;
-    }
-
-    .brandName
-    {
-        font-size: 1.3em;
-    }
-
-	.titleBorder
-	{
-		padding-left: 60px;
-		border-top: 2px solid black;
-		border-bottom: 2px solid black;
-	}
-
-	.hrTop
-	{
-		border-top: 0;
-		border-bottom: 2px solid black;
-		padding: 0;
-		margin-bottom: -16px;
-	}
-
-	.hrBottom
-	{
-		border-top: 2px solid black;
-		border-bottom: 0;
-		padding: 0;
-		margin-top: 0;
-	}
 
 	.imgKwoon
 	{
@@ -103,23 +64,18 @@
 		</div>
 	</nav>
 
-	<hr class="hrTop">
-
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row titleBorder">
 			<div class="col-md-offset-1 col-md-11 col-xs-12">
 				<h2 class="title">Portfolio</h2>
 			</div>
 		</div>
 	</div>
 
-	<hr class="hrBottom">
-
-	<div class="container">
-		
-		<h3 style="margin-top:-10px;"><strong>Responsive Websites & Personal Projects</strong></h3>
-			
+	<div class="container">	
+		<h3><strong>Responsive Websites & Personal Projects</strong></h3>		
 	</div>
+
 	<div class="container-fluid">
 		<div class="row">			
 			<div class="col-md-4 col-sm-6 colPortfolio text-center">
