--- a/contact.html
+++ b/contact.html
@@ -6,46 +6,12 @@
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="master.css">
 
 	<style>
-
-	body
-    {
-        background-color: #f9c667;
-        font-family: 'Kaushan Script', cursive;
-        font-size: 2em;
-    }
-
-    .title
-    {
-        font-size: 1.3em;
-    }
-
-	.titleBorder
-	{
-		padding-left: 60px;
-		border-top: 2px solid black;
-		border-bottom: 2px solid black;
-	}
-
-	.hrTop
-	{
-		border-top: 0;
-		border-bottom: 2px solid black;
-		padding: 0;
-		margin-bottom: -16px;
-	}
-
-	.hrBottom
-		{
-			border-bottom: 0;
-			border-top: 2px solid black;
-			padding: 0;
-			margin-top: 0;
-		}
 
 	.boite
 	{
@@ -85,7 +51,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand title" href="#">Thierry</a>
+				<a class="navbar-brand brandName" href="#">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="">
@@ -100,16 +66,13 @@
 		</div>
 	</nav>
 
-
-	<hr class="hrTop">
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row titleBorder">
 			<div class="col-sm-offset-1 col-xs-11">
-				<h2>Contact</h2>
+				<h2 class="title">Contact</h2>
 			</div>
 		</div>
 	</div>
-	<hr class="hrBottom">
 
 	<div class="container-fluid">
 		<div class="row">
