--- a/home.html
+++ b/home.html
@@ -6,44 +6,10 @@
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="master.css">
 
 	<style>
-
-	body
-    {
-        background-color: #f9c667;
-        font-family: 'Kaushan Script', cursive;
-        font-size: 2em;
-    }
-
-    .title
-    {
-        font-size: 1.3em;
-    }
-
-	.titleBorder
-	{
-		padding-left: 60px;
-		border-top: 2px solid black;
-		border-bottom: 2px solid black;
-	}
-
-	.hrTop
-	{
-		border-top: 0;
-		border-bottom: 2px solid black;
-		padding: 0;
-		margin-bottom: -16px;
-	}
-
-	.hrBottom
-	{
-		border-bottom: 0;
-		border-top: 2px solid black;
-		padding: 0;
-		margin-top: 0;
-	}
 
 	.iphone
 	{
@@ -64,7 +30,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand title" href="#">Thierry</a>
+				<a class="navbar-brand brandName" href="#">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="">
@@ -80,25 +46,21 @@
 		</div>
 	</nav>
 
-
-		<hr class="hrTop">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-offset-1 col-xs-11">
-					<h2>Create an awesome website</h2>
-				</div>
+	<div class="container-fluid">
+		<div class="row titleBorder">
+			<div class="col-sm-offset-1 col-xs-11">
+				<h2 class="title">Create an awesome website</h2>
 			</div>
 		</div>
-		<hr class="hrBottom">
-
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-offset-1 col-xs-11">
-					<img src="smartphone.png" class="iphone">
-					<img src="ipad.png" class="ipad">
-				</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-offset-1 col-xs-11">
+				<img src="smartphone.png" class="iphone">
+				<img src="ipad.png" class="ipad">
 			</div>
 		</div>
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
