--- a/skills.html
+++ b/skills.html
@@ -6,45 +6,10 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="master.css">
     <style>
-
-    body
-    {
-        background-color: #f9c667;
-        font-family: 'Kaushan Script', cursive;
-        font-size: 2em;
-    }
-
-    .title
-    {
-        font-size: 1.3em;
-    }
-
-    .titleBorder
-    {
-        padding-left: 60px;
-        border-top: 2px solid black;
-        border-bottom: 2px solid black;
-    }
-
-    .hrTop
-    {
-        border-top: 0;
-        border-bottom: 2px solid black;
-        padding: 0;
-        margin-bottom: -16px;
-    }
-
-    .hrBottom
-    {
-        border-bottom: 0;
-        border-top: 2px solid black;
-        padding: 0;
-        margin-top: 0;
-    }
 
     .imgHtml
     {
@@ -90,7 +55,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand title" href="#"><span>Thierry</span></a>
+                <a class="navbar-brand brandName" href="#"><span>Thierry</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="">
@@ -106,19 +71,17 @@
         </div>
     </nav>
 
-    <hr class="hrTop">
-
     <div class="container-fluid">
-        <div class="row">
+        <div class="row titleBorder">
             <div class="col-sm-offset-1 col-xs-11">
-                <h2>Skills</h2>
+                <h2 class="title">Skills</h2>
             </div>
         </div>
     </div>
-<hr class="hrBottom">
+
     <div class="container">
         
-        <h3 style="margin-top:-8px">Web Development: </h3>
+        <h3>Web Development: </h3>
        
         <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
