Shadow added on images

--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
 
 	<div class="container-fluid" style="background-color: silver; height: 150px">
 	<p>hello fsj mldsfl fjsljfq <br> fjsljfq <br></p>
-		<img style="float:right; margin-right: 50px; border-radius: 100%; width: 5em; border: 1px solid black" src="photo2.jpg">
+		<img style="float:right; margin-right: 50px; border-radius: 100%; width: 5em;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="photo2.jpg">
 	</div>
 
 	<div class="container">
