--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,9 @@
 		max-height: 300px;
 		max-width: 100%;
 		/*height: 305px;*/
-		border: 1px solid gray;
+		border: 1px solid silver;
 		border-radius: 10px;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	}
 
 	.comingSoon:hover
@@ -28,7 +29,7 @@
 
 	.imgKwoon:hover
 	{
-		border-color:white;
+		border-color:aqua;
 	}
 
 	.colPortfolio
