--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,16 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+		      	</button>
 				<a class="navbar-brand brandName" href="#">Thierry</a>
 			</div>
 
-			<div class="collapse navbar-collapse" id="">
+			<div class="collapse navbar-collapse" id="menu">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="home.html">Home</a></li>
 					<li><a href="skills.html">Skills</a></li>
