Images opacity added

--- a/about.html
+++ b/about.html
@@ -52,9 +52,14 @@
 	</div>
 
 	<div class="container-fluid" style="background-color: silver; height: 150px">
-	<p>hello fsj mldsfl fjsljfq <br> fjsljfq <br></p>
-		<img style="float:right; margin-right: 50px; border-radius: 100%; width: 5em;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="photo2.jpg">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-9">
+				<p>Web Developer Full-Stack <br> fjsljfq <br></p>
+			</div>
+				<img style="float:right; margin-right: 50px; border-radius: 100%; width: 5em;
+			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="photo2.jpg">
+			
+		</div>
 	</div>
 
 	<div class="container">
