--- a/skills.html
+++ b/skills.html
@@ -12,39 +12,9 @@
     <link rel="stylesheet" type="text/css" href="master.css">
     <style>
 
-    .imgHtml
+    img
     {
         height: 100px;
-    }
-
-    .imgBootstrap
-    {
-        height: 100px;
-    }
-
-    .imgJquery
-    {
-        height: 100px;
-    }
-
-    .imgPhp
-    {
-        height: 100px;
-    }
-
-    .imgMysql
-    {
-        height: 100px;
-    }
-
-    .imgGit
-    {
-        height: 100px;
-    }
-
-    .txtBar
-    {
-        font-size: 1.4em;
     }
 
     </style>
