--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,6 @@
 		max-height: 300px;
 		max-width: 100%;
 		/*height: 305px;*/
-		border: 1px solid silver;
 		border-radius: 10px;
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	}
@@ -27,9 +26,10 @@
 		color:blue;
 	}
 
+	
 	.imgKwoon:hover
 	{
-		border-color:aqua;
+		opacity: 0.8;
 	}
 
 	.colPortfolio
