--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
 <body>
 
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -56,7 +56,7 @@
 	<div class="container-fluid">
 		<div class="row titleBorder">
 			<div class="col-sm-offset-1 col-xs-11">
-				<h2 class="title">Create an awesome website</h2>
+				<h3 class="title">Create an awesome website</h3>
 			</div>
 		</div>
 	</div>
