--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -62,7 +62,7 @@
        
         <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgHtml" src="html5css3.png">
+                <img class="imgHtml animSkill" src="html5css3.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animHtml" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                 <span class="sr-only">80% Complete</span>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgBootstrap" src="bootstrap.png">
+                <img class="imgBootstrap animSkill" src="bootstrap.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animBootstrap" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                 <span class="sr-only">70% Complete</span>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgJquery" src="jquery.png">
+                <img class="imgJquery animSkill" src="jquery.png">
                 <div class="progress">
                     <div class="progress-bar progress-bar-info animJQuery" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                     <span class="sr-only">50% Complete</span>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgPhp" src="php.png">
+                <img class="imgPhp animSkill" src="php.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animPhp" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgMysql" src="mysql.png">
+                <img class="imgMysql animSkill" src="mysql.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animMysql" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgGit" src="git.png">
+                <img class="imgGit animSkill" src="git.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
