Navbar bottom font changed in all pages, Homepage content added

--- a/contact.html
+++ b/contact.html
@@ -14,20 +14,13 @@
 
 	<style>
 
-	.boite
-	{
-		width:100%;
-		height:200px;
-		background-color:#EEE;
-		border:1px solid black;
-		border-radius:10px;"
-	}
-
+	
 	.iconPad
 	{
 		padding-right:15px;
 	}
 
+	
 	</style>
 
 </head>
@@ -97,6 +90,25 @@
 			</div>
 		</div>
 	</div>
+
+	<nav class="copyright navbar-fixed-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6">
+				<p><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+			</div>
+			<div class="col-xs-6" style="text-align:right;">
+				<ul class="list-inline">
+					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+			
+	</div>
+	</nav>
+
 		
 
 		
