--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="master.css">
 
 	<style>
@@ -130,10 +132,10 @@ tr td img
 		      <table class="animTable">
 		     	<tr>
 		     		<th>2016</th>
-		    		<th>
+		    		<th class="hidden-xs">
 		   			 Web Developer 
 		      		</th>
-		      		<td class="collapse navbar-collapse">
+		      		<td class="hidden-xs">
 		      		<img src="resolving.png">
 		      		</td>
 		      		<td>
@@ -142,10 +144,10 @@ tr td img
 		    	</tr>
 		    	<tr>
 		     		<th>2014</th>
-		    		<th>
+		    		<th class="hidden-xs">
 		   			 Web Developer PHP 
 		      		</th>
-		      		<td class="collapse navbar-collapse">
+		      		<td class="hidden-xs">
 		      			<img src="starfleetGroup.jpg">
 		      		</td>
 		      		<td>
@@ -154,10 +156,10 @@ tr td img
 		    	</tr>
 		    	<tr>
 		     		<th>2013</th>
-		    		<th>
+		    		<th class="hidden-xs">
 		   			 Data Operators Manager 
 		      		</th>
-		      		<td class="collapse navbar-collapse">
+		      		<td class="hidden-xs">
 		      			<img src="aitySolutions.jpg">
 		      		</td>
 		      		<td>
@@ -227,6 +229,24 @@ tr td img
 	    </div>
 	  </div>
 	</div>
+
+	<nav class="copyright navbar-fixed-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6">
+				<p><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+			</div>
+			<div class="col-xs-6" style="text-align:right;">
+				<ul class="list-inline">
+					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+			
+	</div>
+	</nav>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
