--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="master.css">
 
 	<style>
@@ -141,7 +143,7 @@
 	        <div class="modal-body">
 	        	<div class="col-md-4">
 	          <figure>
-	          	<a href="https://github.com/webdevthierry/Projet-Integration">
+	          	<a href="https://github.com/webdevthierry/Projet-Integration target="_blank"">
 	          		<img class="imgKwoon" src="kwoonIntegration.png">
 	          	</a>
 	          <figcaption><strong>Click on the image to see the source code</strong></figcaption>
@@ -176,7 +178,7 @@
 	       	
 	       		<div class="col-md-4">
 	       			<figure>
-	            		<a href="https://codepen.io/webdevthierry/full/mPWMEr">
+	            		<a href="https://codepen.io/webdevthierry/full/mPWMEr" target="_blank">
 					 		<img class="imgKwoon" src="tributePage.jpg">
 						</a>
 						<figcaption><strong>Click on the image to see the codepen</strong></figcaption>
@@ -195,6 +197,24 @@
 	      </div>
 	    </div>
  	</div>
+
+ 	<nav class="copyright navbar-fixed-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6">
+				<p><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+			</div>
+			<div class="col-xs-6" style="text-align:right;">
+				<ul class="list-inline">
+					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+			
+	</div>
+	</nav>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
