images moved to images folder, animations added, navbar styles changed, email method changed,

--- a/contact.html
+++ b/contact.html
@@ -30,18 +30,18 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+				<button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
 			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand brandName" href="#">Thierry</a>
+				<a class="navbar-brand brandName" href="index.html">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="menu">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="about.html">About</a></li>
@@ -68,7 +68,7 @@
 
 		<div class="row">
 			<div class="col-sm-offset-3 col-sm-6">
-				<form method="GET"	action="contact.php">
+				<form method="POST"	action="contact.php">
 					<div class="form-group input-group">
 						<label class="input-group-addon btn-info iconPad" for="name">
 							<i class="fa fa-user"></i>
@@ -85,7 +85,7 @@
 						
 				<textarea class="form-group form-control" name="message" rows="4" placeholder="Your message" required></textarea>
 
-				<input class="btn btn-primary btn-block" type="submit" value="SUBMIT">
+				<input class="btn btn-primary btn-block text-uppercase" type="submit" value="Submit">
 				</form>
 			</div>
 		</div>
@@ -108,10 +108,6 @@
 			
 	</div>
 	</nav>
-
-		
-
-		
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
