--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,6 @@
 	{
 		max-height: 300px;
 		max-width: 100%;
-		/*height: 305px;*/
 		border-radius: 10px;
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	}
@@ -53,18 +52,18 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+				<button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
 			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
+			        <span class="barColor icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand brandName" href="#">Thierry</a>
+				<a class="navbar-brand brandName" href="index.html">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="menu">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li class="active"><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="about.html">About</a></li>
@@ -91,14 +90,14 @@
 		<div class="row">			
 			<div class="col-md-4 col-sm-6 colPortfolio text-center">
 				<figure>
-					<img class="imgKwoon" src="kwoonIntegration.png" data-toggle="modal" data-target="#project1" data-backdrop="true">
+					<img class="imgKwoon" src="images/kwoonIntegration.png" data-toggle="modal" data-target="#project1" data-backdrop="true">
 					<figcaption><strong>Front-End Project</strong></figcaption>
 				</figure>
 			</div>
 
 			<div class="col-md-4 col-sm-6 colPortfolio text-center">
 				<figure>
-					<img class="imgKwoon" src="tributePage.jpg" data-toggle="modal" data-target="#project2" data-backdrop="true">
+					<img class="imgKwoon" src="images/tributePage.jpg" data-toggle="modal" data-target="#project2" data-backdrop="true">
 					<figcaption><strong>Tribute Page</strong></figcaption>
 				</figure>
 			</div>
@@ -143,8 +142,8 @@
 	        <div class="modal-body">
 	        	<div class="col-md-4">
 	          <figure>
-	          	<a href="https://github.com/webdevthierry/Projet-Integration target="_blank"">
-	          		<img class="imgKwoon" src="kwoonIntegration.png">
+	          	<a href="https://github.com/webdevthierry/Projet-Integration" target="_blank">
+	          		<img class="imgKwoon" src="images/kwoonIntegration.png">
 	          	</a>
 	          <figcaption><strong>Click on the image to see the source code</strong></figcaption>
 	          	</div>
@@ -179,7 +178,7 @@
 	       		<div class="col-md-4">
 	       			<figure>
 	            		<a href="https://codepen.io/webdevthierry/full/mPWMEr" target="_blank">
-					 		<img class="imgKwoon" src="tributePage.jpg">
+					 		<img class="imgKwoon" src="images/tributePage.jpg">
 						</a>
 						<figcaption><strong>Click on the image to see the codepen</strong></figcaption>
 					</figure>
