--- a/about.html
+++ b/about.html
@@ -14,11 +14,6 @@
 
 	<style>
 
-#navbarBg
-{
-	background-color: red;
-}
-
 button .barColor
 {
 	background-color: white !important;
@@ -78,12 +73,12 @@ tr td img
 			        <span class="barColor icon-bar"></span>
 			        <span class="barColor icon-bar"></span>
 		      	</button>
-				<a class="navbar-brand brandName" href="#">Thierry</a>
+				<a class="navbar-brand brandName" href="index.html">Thierry</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="menu">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li class="active"><a href="about.html">About</a></li>
@@ -108,8 +103,11 @@ tr td img
 				<p>I am known for my punctuality and for being a hard-working person.</p>
 			</div>
 			<div class="col-sm-2">
-				<img class="profile" style="display:block; margin: 10px auto; border-radius: 50%; width: 5em;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="photo2.jpg">
+				<figure>
+						<img class="profile" style="display:block; margin: 10px auto; border-radius: 50%; width: 5em;
+							box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="images/photo2.jpg">
+							<figcaption style="text-align: center">Thierry HOR</figcaption>
+				</figure>
 			</div>
 		</div>
 	</div>
@@ -136,7 +134,7 @@ tr td img
 		   			 Web Developer 
 		      		</th>
 		      		<td class="hidden-xs">
-		      		<img src="resolving.png">
+		      		<img src="images/resolving.png">
 		      		</td>
 		      		<td>
 		      			Development of an app which takes information from a database based on id, status, states,... to a PDF for <strong><a class="link" target="_blank" href="http://resolving.com">Resolving</a></strong> 
@@ -148,7 +146,7 @@ tr td img
 		   			 Web Developer PHP 
 		      		</th>
 		      		<td class="hidden-xs">
-		      			<img src="starfleetGroup.jpg">
+		      			<img src="images/starfleetGroup.jpg">
 		      		</td>
 		      		<td>
 		      			Development of the Japanese website <a class="link" target="_blank" href="https://www.ecofa.jp">www.ecofa.jp</a> which is a e-commerce of recycled products for <strong><a class="link" target="_blank" href="http://www.starfleet.co.jp">Starfleet Group</a></strong> 
@@ -160,7 +158,7 @@ tr td img
 		   			 Data Operators Manager 
 		      		</th>
 		      		<td class="hidden-xs">
-		      			<img src="aitySolutions.jpg">
+		      			<img src="images/aitySolutions.jpg">
 		      		</td>
 		      		<td>
 		      			Involved in the writing of the online guide <a class="link" target="_blank" href="http://www.overcambodia.com/en">www.overcambodia.com</a> for <strong><a class="link" target="_blank" href="http://aitysolutions.com">Aity Solutions</a></strong> 
@@ -209,20 +207,20 @@ tr td img
 	      		<ul>
 	      			<li>Kung-Fu Wushu
 	      			<br>
-	      			<img src="blueBelt.png">
+	      			<img src="images/blueBelt.png">
 	      				<ul>
 	      					<li>
 				      			
 				      			<p>3rd in the French Cup in 2004</p>
 
 			      			</li>
-			      			<img class="medals" src="medals.jpg">
+			      			<img class="medals" src="images/medals.jpg">
 		      			</ul>
 	      			</li>
 					
 	      			<li>Taekwondo
 	      			<br>
-	      				<img src="blueBelt.png">
+	      				<img src="images/blueBelt.png">
 	      			</li>
 	      		</ul>
 	      </ul>
