--- a/skills.html
+++ b/skills.html
@@ -27,18 +27,18 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+                <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="barColor icon-bar"></span>
+                    <span class="barColor icon-bar"></span>
+                    <span class="barColor icon-bar"></span>
                 </button>
-                <a class="navbar-brand brandName" href="#"><span>Thierry</span></a>
+                <a class="navbar-brand brandName" href="index.html"><span>Thierry</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="skills.html">Skills</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
@@ -63,7 +63,7 @@
        
         <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgHtml animSkill" src="html5css3.png">
+                <img class="imgHtml animSkill" src="images/html5css3.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animHtml" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                 <span class="sr-only">80% Complete</span>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgBootstrap animSkill" src="bootstrap.png">
+                <img class="imgBootstrap animSkill" src="images/bootstrap.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animBootstrap" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                 <span class="sr-only">70% Complete</span>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgJquery animSkill" src="jquery.png">
+                <img class="imgJquery animSkill" src="images/jquery.png">
                 <div class="progress">
                     <div class="progress-bar progress-bar-info animJQuery" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                     <span class="sr-only">50% Complete</span>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgPhp animSkill" src="php.png">
+                <img class="imgPhp animSkill" src="images/php.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animPhp" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgMysql animSkill" src="mysql.png">
+                <img class="imgMysql animSkill" src="images/mysql.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animMysql" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -108,7 +108,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgGit animSkill" src="git.png">
+                <img class="imgGit animSkill" src="images/git.png">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
